--- a/templates/ress.html
+++ b/templates/ress.html
@@ -26,15 +26,15 @@
 {% else %}
 	<table width="100%" border="2px solid black">
 <tr>
-	<td align="center" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" colspan="2">
+	<td align="center" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" colspan="2">
 	<h3>Mid-I</h3>
 {% for task in res1.each() %}
 {% for a,b in task.val().items() %}
 
 <h3>{{a}} : {{b}}</h3><br>{% endfor %}{% endfor %}</td>
-<td align="center" width="20%" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" colspan="2">
+<td align="center" width="20%" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" colspan="2">
 
 <h3>Mid-II</h3>
 {% for task1 in res2.each() %}
@@ -42,15 +42,15 @@ background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 9
 
 <h3>{{k}} : {{v}}</h3><br>{% endfor %}{% endfor %}</td></tr>
 <tr>
-	<td align="center" width="25%" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" >
+	<td align="center" width="25%" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" >
 <h3>80%</h3>
 {% for i,j in data.items() %}
 {{i}}: {{j}}<br>
 {% endfor %}
 </td>
-	<td align="center" width="25%" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" >
+	<td align="center" width="25%" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" >
 <h3>20%</h3>
 {% for i,j in data1.items() %}
 {{i}}: {{j}}<br>
@@ -58,15 +58,15 @@ background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 9
 </td>
 
 
-	<td align="center" width="25%" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" >
+	<td align="center" width="25%" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" >
 <h3>FINAL TOTAL</h3>
 {% for i,j in ft.items() %}
 {{i}}: {{j}}<br>
 {% endfor %}
 </td>
-<td align="center" width="25%" style="background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(244,221,39,1) 99%);" >
+<td align="center" width="25%" style="background: #37517E;
+background: linear-gradient(259deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 100%);" >
 <h3>Result</h3>
 {% for i,j in ft.items() %}
 {% if j >= 10.0 %}
