--- a/templates/test1.html
+++ b/templates/test1.html
@@ -59,10 +59,10 @@ body > #bg{
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
    <li class="nav-item">
-    <a class="nav-link" href="/">Home</a>
+    <a class="nav-link" href="/" style="color: white;text-decoration: none;">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/firebase">Mid Marks</a>
+    <a class="nav-link" href="/firebase" style="color: white;text-decoration: none;">Mid Marks</a>
   </li>
   <li class="nav-item">
     <button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
