--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -315,10 +315,10 @@ marquee img{
 </ul></ul>
 	</td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login" style="color:#31458;text-decoration: none;">Enter Marks</a></button></td></tr>
+<button class = 'btn btn-primary' style="width: 200px; box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login" style="color:white;text-decoration: none;">Enter Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/checkmarks" style="color:#31458;text-decoration: none;">View Marks</a></button></td></tr>
+<button class = 'btn btn-primary' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/checkmarks" style="color:white;text-decoration: none;">View Marks</a></button></td></tr>
 <tr><td align="center" style = "padding:20px;">
-<button class = 'btn btn-danger' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login1" style="color:#31458;text-decoration: none;">Delete Marks</a></button></td></tr></table>
+<button class = 'btn btn-danger' style="width: 200px;box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px;  "><a href = "/login1" style="color:white;text-decoration: none;">Delete Marks</a></button></td></tr></table>
 </body>
 </html>
