--- a/templates/home.html
+++ b/templates/home.html
@@ -456,13 +456,13 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/c" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/cc.png')}}" height="45px" width="45px"><br><b>C Programming</b></a></button></div>
+				<a href = "/c" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/cc.png')}}" height="45px" width="45px"><br><b style="width: 100%">C Programming</b></a></button></div>
 
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/c1" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/c+++.png')}}" height="40px" width="40px"><br><b>C++ Programming</b></a></button></div>
+				<a href = "/c1" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/c+++.png')}}" height="40px" width="40px"><br><b style="width: 100%">C++ Programming</b></a></button></div>
 			
 		</td>
 	</tr>
@@ -476,12 +476,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/python" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/python.png')}}" height="40px" width="40px"><br><b>Python Programming</b></a></button></div>
+				<a href = "/python" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/python.png')}}" height="40px" width="40px"><br><b style="width: 100%">Python Programming</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/java" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/java1.png')}}" height="40px" width="40px"><br><b>Java Programming</b></a></button></div>
+				<a href = "/java" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/java1.png')}}" height="40px" width="40px"><br><b style="width: 100%">Java Programming</b></a></button></div>
 		</td>
 	</tr>
 <tr>
@@ -494,12 +494,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ds" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ds.png')}}" height="60px" width="60px"><br><b>Data Structures</b></a></button></div>
+				<a href = "/ds" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ds.png')}}" height="60px" width="60px"><br><b style="width: 100%">Data Structures</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ads" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ads.png')}}" height="40px" width="40px"><br><b>Advance Data Structures</b></a></button></div>
+				<a href = "/ads" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ads.png')}}" height="40px" width="40px"><br><b style="width: 100%">Advance Data Structures</b></a></button></div>
 		</td>
 	</tr>
 	<tr>
@@ -512,12 +512,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/htm" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/html.png')}}" height="40px" width="40px"><br><b>Web Technologies</b></a></button></div>
+				<a href = "/htm" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/html.png')}}" height="40px" width="40px"><br><b style="width: 100%">Web Technologies</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/sql" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/sql2.png')}}" height="45px" width="45px"><br><b>SQL Programming</b></a></button></div>
+				<a href = "/sql" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/sql2.png')}}" height="45px" width="45px"><br><b style="width: 100%">SQL Programming</b></a></button></div>
 		</td>
 	</tr>
 <tr>
@@ -530,12 +530,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ml" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ml.png')}}" height="40px" width="40px"><br><b>Unified Model Language</b></a></button></div>
+				<a href = "/ml" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ml.png')}}" height="40px" width="40px"><br><b style="width: 100%">Unified Model Language</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/rp" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/rp.png')}}" height="40px" width="40px"><br><b>R Programming</b></a></button></div>
+				<a href = "/rp" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/rp.png')}}" height="40px" width="40px"><br><b style="width: 100%">R Programming</b></a></button></div>
 		</td>
 	</tr>
 	<tr>
@@ -548,7 +548,7 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/nix" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/nix.png')}}" height="30px" width="40px"><br><b>Unix Programming</b></a></button></div>
+				<a href = "/nix" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/nix.png')}}" height="30px" width="40px"><br><b style="width: 100%">Unix Programming</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<a href = "#"></a>
